--- a/parts/part5.html
+++ b/parts/part5.html
@@ -26,6 +26,38 @@ const svg = d3.select('body')
   .append('svg')
   .attr('class', 'container');
 
+const getCharacterSet = () => {
+  // start with 0 - 9
+  const characters = [48, 49, 50, 51, 52, 53, 54, 55, 56, 57];
+
+  // Hiragana
+  // 3041— 309F
+  const hiraganaMin = parseInt('3041', 16);
+  const hiraganaMax = parseInt('309F', 16);
+
+  for (let i = hiraganaMin; i <= hiraganaMax; i++) {
+    characters.push(i);
+  }
+
+  // Katakana
+  // 30A0— 30FF
+  const katakanaMin = parseInt('30A0', 16);
+  const katakanaMax = parseInt('30FF', 16);
+
+  for (let i = katakanaMin; i <= katakanaMax; i++) {
+    characters.push(i);
+  }
+
+  return characters;
+};
+
+const charMap = getCharacterSet();
+
+const getRandomCharacter = () => {
+  const index = Math.floor(Math.random() * (charMap.length - 1));
+  return String.fromCodePoint(charMap[index]);
+};
+
 // now, let's pick an arbitrary spot to put a letter in
 const letter = svg.append('text')
   .attr('class', 'letter')
@@ -33,7 +65,7 @@ const letter = svg.append('text')
   .attr('text-anchor', 'middle')
   .attr('x', 100)
   .attr('y', 100)
-  .text('a');
+  .text(getRandomCharacter());
 
 const lineX = svg.append('line')
   .attr('stroke', '#ee0000')
