--- a/index.html
+++ b/index.html
@@ -21,145 +21,197 @@
 </head>
 <body>
 <script>
-const getCharacterSet = () => {
-  // start with 0 - 9
-  const characters = [48, 49, 50, 51, 52, 53, 54, 55, 56, 57];
+  const colors = {
+    superBrightGreen: '#E6FFEC',
+    brightGreen: '#00FF41',
+    green: '#008F11',
+    darkGreen: '#003B00',
+    superDarkGreen: '#002300',
+  };
 
-  // Hiragana
-  // 3041— 309F
-  const hiraganaMin = parseInt('3041', 16);
-  const hiraganaMax = parseInt('309F', 16);
+  const getCharacterSet = () => {
+    // start with 0 - 9
+    const characters = [48, 49, 50, 51, 52, 53, 54, 55, 56, 57];
 
-  for (let i = hiraganaMin; i <= hiraganaMax; i++) {
-    characters.push(i);
-  }
+    // Hiragana
+    // 3041— 309F
+    const hiraganaMin = parseInt('3041', 16);
+    const hiraganaMax = parseInt('309F', 16);
 
-  // Katakana
-  // 30A0— 30FF
-  const katakanaMin = parseInt('30A0', 16);
-  const katakanaMax = parseInt('30FF', 16);
-
-  for (let i = katakanaMin; i <= katakanaMax; i++) {
-    characters.push(i);
-  }
-
-  return characters;
-};
-
-const charMap = getCharacterSet();
-
-const getRandomCharacter = () => {
-  const index = Math.floor(Math.random() * (charMap.length - 1));
-  return String.fromCodePoint(charMap[index]);
-};
-
-const svg = d3.select('body')
-  .append('svg')
-  .attr('class', 'container');
-
-const charSize = {
-  width: 32,
-  height: 32,
-};
-
-let svgSize = svg.node().getBoundingClientRect();
-let maxVisibleChars = (svgSize.width * svgSize.height) / (charSize.width * charSize.height);
-let maxVisibleCharsAllowed = Math.floor(maxVisibleChars * 0.70);
-
-const getHorizontalSlots = () => {
-  return Math.ceil(svgSize.width / charSize.width);
-};
-
-let horizontalSlots = getHorizontalSlots();
-
-// reset variables depending on the container size
-d3.interval(() => {
-  const newSvgSize = svg.node().getBoundingClientRect();
-
-  if (newSvgSize.width !== svgSize.width || newSvgSize.height !== svgSize.height) {
-    console.log('yes');
-    svgSize = newSvgSize;
-    maxVisibleChars = (svgSize.width * svgSize.height) / (charSize.width * charSize.height);
-    maxVisibleCharsAllowed = Math.floor(maxVisibleChars * 0.50);
-    horizontalSlots = getHorizontalSlots();
-  }
-
-  // look at the DOM to see if there are too many elements. If so, remove them.
-  const elms = document.getElementsByTagName('text');
-  const leftoverDomCount = elms.length - maxVisibleCharsAllowed;
-
-  if (leftoverDomCount > 0) {
-    for (let i = leftoverDomCount; i >= 0; i--) {
-        elms[i].remove();
+    for (let i = hiraganaMin; i <= hiraganaMax; i++) {
+      characters.push(i);
     }
-  }
-}, 500);
 
-const placeText = (char, x, y) => {
-  const letter = svg.append('text')
-    .attr('class', 'letter')
-    .attr('fill', '#E6FFEC')
-    .attr('text-anchor', 'middle')
-    .attr('transform', 'scale(-1, 1)')
-    .attr('x', -x)
-    .attr('y', y)
-    .attr('opacity', 1)
-    .text(char);
-  
-  letter
-    .transition()
-      .duration(100)
-      .attr('fill', '#00FF41')
-    .transition()
-      .duration(10)
-      .attr('fill', '#008F11');
-  
-  d3.timeout(() => {
-    letter.transition()
-      .duration(750)
-      .attr('fill', '#003B00');
-  }, Math.floor(Math.random() * 3000));
-  
-  d3.timeout(() => {
-    letter.transition()
-      .duration(750)
-      .attr('fill', '#002300');
-  }, Math.floor(Math.random() * 4000));
-  
-  d3.timeout(() => {
-    letter.transition()
-      .duration(750)
-      .attr('opacity', 0)
-      .remove();
-  }, Math.floor(Math.random() * 10000));
-};
+    // Katakana
+    // 30A0— 30FF
+    const katakanaMin = parseInt('30A0', 16);
+    const katakanaMax = parseInt('30FF', 16);
 
-const loop = () => {
-  let verticalCounter = Math.floor(Math.random() * 15);
-  let horizontalSlot = Math.floor(Math.random() * horizontalSlots);
-  
-  return () => {
-    placeText(
-      getRandomCharacter(),
-      charSize.width * horizontalSlot,
-      charSize.height * verticalCounter);
+    for (let i = katakanaMin; i <= katakanaMax; i++) {
+      characters.push(i);
+    }
 
-    verticalCounter++;
+    return characters;
+  };
 
-    if (charSize.height * verticalCounter > svgSize.height) {
-      verticalCounter = Math.floor(Math.random() * 5);
-      horizontalSlot = Math.floor(Math.random() * horizontalSlots);
+  const svg = d3.select('body')
+    .append('svg')
+    .attr('class', 'container');
+
+  let svgSize = svg.node().getBoundingClientRect();
+
+  const charSize = {
+    width: 32,
+    height: 37,
+  };
+
+  const charMap = getCharacterSet();
+
+  const getRandomCharacter = () => {
+    const index = Math.floor(Math.random() * (charMap.length - 1));
+    return String.fromCodePoint(charMap[index]);
+  };
+
+  const shuffle = (array) => {
+    for (let i = array.length - 1; i > 0; i--) {
+      let j = Math.floor(Math.random() * (i + 1));
+      [array[i], array[j]] = [array[j], array[i]];
+    }
+    return array;
+  };
+
+  const placeText = (character, position) => {
+    const letter = svg.append('text')
+      .attr('class', 'letter')
+      .attr('fill', colors.superBrightGreen)
+      .attr('opacity', 1)
+      .attr('text-anchor', 'middle')
+      .attr('dominant-baseline', 'text-before-edge')
+      .attr('transform', 'scale(-1, 1)')
+      .attr('x', -position.x - (charSize.width / 2))
+      .attr('y', position.y)
+      .text(character);
+
+    return letter;
+  };
+
+  const animateText = (letter) => {
+    letter
+      .transition()
+        .duration(100)
+        .attr('fill', colors.brightGreen)
+      .transition()
+        .duration(10)
+        .attr('fill', colors.green);
+
+    d3.timeout(() => {
+      letter.transition()
+        .duration(750)
+        .attr('fill', colors.darkGreen);
+    }, Math.floor(Math.random() * 3000));
+
+    d3.timeout(() => {
+      letter.transition()
+        .duration(750)
+        .attr('fill', colors.superDarkGreen);
+    }, Math.floor(Math.random() * 4000));
+
+    d3.timeout(() => {
+      letter.transition()
+        .duration(750)
+        .attr('opacity', 0)
+        .remove();
+    }, Math.floor(Math.random() * 10000));
+  };
+
+  const getMatrix = () => {
+    let columns = Math.ceil(svgSize.width / charSize.width);
+    let rows = Math.ceil(svgSize.height / charSize.height);
+    const matrix = [];
+
+    for (let column = 0; column < columns; column++) {
+      matrix[column] = [];
+      let columnPosition = column * charSize.width;
+
+      for (let row = 0; row < rows; row++) {
+        let rowPosition = row * charSize.height;
+        matrix[column][row] = {
+          x: columnPosition,
+          y: rowPosition,
+        };
+      }
+    }
+
+    return matrix;
+  };
+
+  let matrix = getMatrix();
+
+  const rainDrop = () => {
+    // get the matrix column indices as an array of strings to shuffle
+    let shuffledColumns = Object.keys(matrix);
+    shuffle(shuffledColumns);
+    let shuffledIndex = 0;
+
+    let column = shuffledColumns[shuffledIndex];
+    const getRandomStartingRow = () => {
+      const maxRows = matrix[0].length;
+      return Math.floor(Math.random() * Math.ceil(maxRows * 0.3));
+    };
+
+    let row = getRandomStartingRow();
+
+    // return a function which, when run, places the text in the next
+    // spot until it finishes
+    return () => {
+      const char = getRandomCharacter();
+      const position = matrix[column][row];
+      const letter = placeText(char, position);
+      animateText(letter);
+      row++;
+
+      // if we went through all of the rows, pick a new column
+      // and start over
+      if (row >= matrix[column].length) {
+        shuffledIndex++;
+
+        // if we went through all columns, shuffle them again
+        if (shuffledIndex >= shuffledColumns.length) {
+          shuffle(shuffledColumns);
+          shuffledIndex = 0;
+        }
+
+        // pick the next column and reset the row
+        column = shuffledColumns[shuffledIndex];
+        row = getRandomStartingRow();
+      }
+    };
+  };
+
+  const removeExtraTextElements = () => {
+    const maxVisibleChars = (svgSize.width * svgSize.height) / (charSize.width * charSize.height);
+    const maxVisibleCharsAllowed = Math.floor(maxVisibleChars * 0.70);
+
+    const elements = document.getElementsByTagName('text');
+    const leftoverDomCount = elements.length - maxVisibleCharsAllowed;
+
+    if (leftoverDomCount > 0) {
+      console.log(`extra elements found - ${leftoverDomCount}`);
+      for (let i = 0; i < leftoverDomCount; i++) {
+          elements[i].remove();
+      }
     }
   };
-};
 
-const a = loop();
-const b = loop();
-const c = loop();
+  d3.interval(removeExtraTextElements, 500);
 
-d3.interval(a, Math.floor(100 + Math.random() * 50));
-d3.interval(b, Math.floor(100 + Math.random() * 50));
-d3.interval(c, Math.floor(100 + Math.random() * 50));
+  const rainDrop1 = rainDrop();
+  const rainDrop2 = rainDrop();
+  const rainDrop3 = rainDrop();
+
+  d3.interval(rainDrop1, Math.floor(100 + Math.random() * 50));
+  d3.interval(rainDrop2, Math.floor(100 + Math.random() * 100));
+  d3.interval(rainDrop3, Math.floor(100 + Math.random() * 150));
 </script>
 </body>
 </html>
