--- a/parts/part13.html
+++ b/parts/part13.html
@@ -22,10 +22,14 @@
 </head>
 <body>
 <script>
-// part 10c - make it rain - safeguard against large DOMs
-const svg = d3.select('body')
-  .append('svg')
-  .attr('class', 'container');
+// part 13 - address performance issues
+const colors = {
+  superBrightGreen: '#E6FFEC',
+  brightGreen: '#00FF41',
+  green: '#008F11',
+  darkGreen: '#003B00',
+  superDarkGreen: '#002300',
+};
 
 const getCharacterSet = () => {
   // start with 0 - 9
@@ -52,6 +56,17 @@ const getCharacterSet = () => {
   return characters;
 };
 
+const svg = d3.select('body')
+  .append('svg')
+  .attr('class', 'container');
+
+let svgSize = svg.node().getBoundingClientRect();
+
+const charSize = {
+  width: 32,
+  height: 37,
+};
+
 const charMap = getCharacterSet();
 
 const getRandomCharacter = () => {
@@ -59,11 +74,67 @@ const getRandomCharacter = () => {
   return String.fromCodePoint(charMap[index]);
 };
 
-let svgSize = svg.node().getBoundingClientRect();
+const shuffle = (array) => {
+  for (let i = array.length - 1; i > 0; i--) {
+    let j = Math.floor(Math.random() * (i + 1));
+    [array[i], array[j]] = [array[j], array[i]];
+  }
+  return array;
+};
 
-const charSize = {
-  width: 32,
-  height: 37,
+const placeText = (character, position) => {
+  const letter = svg.append('text')
+    .attr('class', 'letter')
+    .attr('fill', colors.superBrightGreen)
+    .attr('opacity', 1)
+    .attr('text-anchor', 'middle')
+    .attr('dominant-baseline', 'text-before-edge')
+    .attr('transform', 'scale(-1, 1)')
+    .attr('x', -position.x - (charSize.width / 2))
+    .attr('y', position.y)
+    .text(character);
+
+  return letter;
+};
+
+const updateColor = (letter, color) => {
+  letter.transition()
+    .duration(750)
+    .attr('fill', color);
+};
+
+const removeLetter = (letter) => {
+  letter.transition()
+    .duration(750)
+    .attr('opacity', 0)
+    .remove();
+};
+
+const animateText = (letter) => {
+  letter
+    .transition()
+      .duration(100)
+      .attr('fill', colors.brightGreen)
+    .transition()
+      .duration(10)
+      .attr('fill', colors.green);
+
+  setTimeout(
+    updateColor,
+    Math.floor(Math.random() * 3000),
+    letter,
+    colors.darkGreen);
+
+  setTimeout(
+    updateColor,
+    Math.floor(Math.random() * 4000),
+    letter,
+    colors.superDarkGreen);
+
+  setTimeout(
+    removeLetter,
+    Math.floor(Math.random() * 10000),
+    letter);
 };
 
 const getMatrix = () => {
@@ -89,28 +160,6 @@ const getMatrix = () => {
 
 let matrix = getMatrix();
 
-const shuffle = (array) => {
-  for (let i = array.length - 1; i > 0; i--) {
-    let j = Math.floor(Math.random() * (i + 1));
-    [array[i], array[j]] = [array[j], array[i]];
-  }
-  return array;
-};
-
-const placeText = (character, position) => {
-    const letter = svg.append('text')
-      .attr('class', 'letter')
-      .attr('fill', '#dfdfdf')
-      .attr('text-anchor', 'middle')
-      .attr('dominant-baseline', 'text-before-edge')
-      .attr('transform', 'scale(-1, 1)')
-      .attr('x', -position.x - (charSize.width / 2))
-      .attr('y', position.y)
-      .text(character);
-
-    d3.timeout(() => letter.remove(), Math.floor(Math.random() * 5000) + 2000);
-};
-
 const rainDrop = () => {
   // get the matrix column indices as an array of strings to shuffle
   let shuffledColumns = Object.keys(matrix);
@@ -118,14 +167,20 @@ const rainDrop = () => {
   let shuffledIndex = 0;
 
   let column = shuffledColumns[shuffledIndex];
-  let row = 0;
+  const getRandomStartingRow = () => {
+    const maxRows = matrix[0].length;
+    return Math.floor(Math.random() * Math.ceil(maxRows * 0.3));
+  };
+
+  let row = getRandomStartingRow();
 
   // return a function which, when run, places the text in the next
   // spot until it finishes
   return () => {
     const char = getRandomCharacter();
     const position = matrix[column][row];
-    placeText(char, position);
+    const letter = placeText(char, position);
+    animateText(letter);
     row++;
 
     // if we went through all of the rows, pick a new column
@@ -141,7 +196,7 @@ const rainDrop = () => {
 
       // pick the next column and reset the row
       column = shuffledColumns[shuffledIndex];
-      row = 0;
+      row = getRandomStartingRow();
     }
   };
 };
@@ -164,7 +219,12 @@ const removeExtraTextElements = () => {
 d3.interval(removeExtraTextElements, 500);
 
 const rainDrop1 = rainDrop();
-d3.interval(rainDrop1, 50);
+const rainDrop2 = rainDrop();
+const rainDrop3 = rainDrop();
+
+d3.interval(rainDrop1, Math.floor(100 + Math.random() * 50));
+d3.interval(rainDrop2, Math.floor(100 + Math.random() * 100));
+d3.interval(rainDrop3, Math.floor(100 + Math.random() * 150));
 </script>
 </body>
 </html>
