--- a/parts/part3.html
+++ b/parts/part3.html
@@ -15,6 +15,7 @@
 
   .letter {
     font-size: 2em;
+    font-family: Times;
   }
 </style>
   <script src="https://d3js.org/d3.v6.min.js"></script>
