renaming part13 to performance-issues to look at later

--- a/parts/performance-issues.html
+++ b/parts/performance-issues.html
@@ -22,7 +22,7 @@
 </head>
 <body>
 <script>
-// part 13 - address performance issues
+// address performance issues
 const colors = {
   superBrightGreen: '#E6FFEC',
   brightGreen: '#00FF41',
